# claudicant

./: Cargo.toml  README.md
.claudicant/: config.toml
.claudicant/prompts/: basic.md  error-handling.md  security.md
src/: app.rs  auth.rs  claude.rs  cli.rs  config.rs  event.rs  git_diff.rs  main.rs  prompts.rs  repo.rs  review.rs  settings.rs  taskrunner.rs  theme.rs
src/github/: client.rs  models.rs
src/ui/: action_dialog.rs  commits.rs  diff.rs  highlight.rs  mod.rs  prompt_picker.rs  render.rs  settings.rs
