[package]
name = "claudicant"
version = "0.1.0"
edition = "2021"
description = "A TUI tool for curating GitHub PR reviews with Claude AI"

[dependencies]
ratatui = "0.30"
octocrab = "0.49"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
syntect = "5.3"
git2 = "0.20"
tui-markdown = "0.3"
throbber-widgets-tui = "0.11"
tempfile = "3"
dirs = "6"
toml = "0.8"
